--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bleno": "*",
     "clamp": "^1.0.1",
     "commander": "2.5.x",
+    "lorem-ipsum": "^1.0.1",
     "node-uuid": "*",
     "promptly": "0.2.x"
   },
